--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,64 @@
 body {
     background-color: lightsteelblue;
     font-family: monospace;
+    font-size: large;
+}
+
+a {
+    color: black;
+}
+
+.main {
+    margin: 2rem;
+    margin-top: 5rem;
+    display: block;
+}
+
+.navbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    width: 100%;
+    background-color: lightgray;
+    text-align: center;
+    word-spacing: 5rem;
+}
+
+.highlight{
+    padding: 0.5rem;
+    margin: 0.75rem 0;
+    display: inline-block;
+    outline: 2px solid darkblue;
+}
+
+.minor{
+    color: gray;
+    font-style: italic;
+}
+
+.button {
+    text-decoration: none;
+    &:hover {
+        background-color: rgba(192, 98, 215, 0.1);
+        transform: scale(0.975);
+        transform-origin: center;
+        transition-duration: 0.2s;
+    }
+}
+
+.photo-grid{
+    padding-top: 1rem;
+    display: block;
+    max-width: 90vw;
+    & .photo{
+        display: inline-block;
+        margin-right: 0.5rem;
+    }
+}
+
+
+.photo *{
+    display: inline;
+    max-height: 30vh;
 }
